# Project2

./: CMakeLists.txt  Proyecto 2.docx  main.cpp  ~$oyecto 2.docx
Admin/: CMakeLists.txt  main.cpp
Admin/Sockets/Client/: CMakeLists.txt  client.cpp
Admin/Sockets/Client2/: CMakeLists.txt
Admin/Sockets/Server/: server.cpp
Admin/data/: Administradores.txt  MarcasProductos.txt  Pasillos.txt
Admin/reports/: aislesList.txt  brandsList.txt  clientWhoBoughtTheLeast.txt  clientsList.txt  inventoryList.txt  leastVisitedAisle.txt  mostBilledClient.txt  mostExpensiveBill.txt  mostProductsPerAisle.txt  mostSoldBrand.txt  mostVisitedAisle.txt  productsList.txt
Admin/src/TreesHandlers/: AATree.h  AVLBinaryTree.h  BTreeAdmins.h  BTreeClients.h  BinarySearchTree.h  RBTree.h
Admin/src/helpers/: citiesList.h  citiesNode.h  clientProductStackNode.h  clientQueueNode.h  exceptionsHandler.h  helpers.h  quickSortHelper.h  salesList.h  salesNode.h  test.h
Admin/src/modules/: modules.h
Admin/src/nodeTypes/: AVLNode.h  BNodeAdmin.h  BNodeClient.h  BSNode.h  RBNode.h
Admin/thread code/: main.cpp
Client/: CMakeLists.txt  main.cpp
Sockets/Server/: CMakeLists.txt
data/: ProductosPasillos.txt
src/TreesHandlers/: AATree.h  AVLBinaryTree.h  BinarySearchTree.h  RBTree.h
src/helpers/: clientQueue.h  helpers.h
src/modules/: modules.h
src/nodeTypes/: AANode.h  AVLNode.h  BNodeClient.h  BSNode.h  BaseBinaryNode.h  RBNode.h
